--- a/styles/style.css
+++ b/styles/style.css
@@ -4,9 +4,14 @@ body {
 }
 
 main {
-    max-width: 500px;
+    max-width: 600px;
     margin: auto;
     color: #AEB665;
+}
+
+img {
+    border-radius: 10px;
+    border: 1px solid white;
 }
 
 h1,
